test/compilable/dtoh_verbose.d
/*
REQUIRED_ARGS: -HC=verbose
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler v$n$

#pragma once

#include <stddef.h>
#include <stdint.h>


// Ignored function dtoh_verbose.foo because of linkage
// Ignored variable dtoh_verbose.i because of linkage
// Ignored function dtoh_verbose.bar because of linkage
// Ignored non-cpp struct S because of linkage
// Ignored non-cpp class C
// Ignored function dtoh_verbose.bar because it's extern
// Ignored variable dtoh_verbose.i1 because of linkage
// Ignored template dtoh_verbose.templ(T)(T t) because of linkage
// Ignored function dtoh_verbose.templ!int.templ
// Ignored enum dtoh_verbose.arrayOpaque because of it's base type
struct Hidden
{
    // Ignored function dtoh_verbose.Hidden.hidden because it's private
    Hidden()
    {
    }
};
---
*/

void foo() {}

extern (D) {
    int i;
}

void bar();

struct S {}

class C {}

extern(C++) void bar();

int i1;

void templ(T)(T t) {}

alias inst = templ!int;

enum arrayOpaque : int[4];

extern(C++) struct Hidden
{
    private void hidden() {}
}
